feat: add OpenExplorer functionality and improve project path handling

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -538,5 +538,9 @@
   "Disabled": {
     "message": "Disabled",
     "description": "The text of the Disabled"
+  },
+  "OpenExplorer": {
+    "message": "open explorer",
+    "description": "The text of the OpenExplorer"
   }
 }
